cabal-version:      2.4
name:               elastically-scalable-thread-pools
version:            0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             Stevan Andjelkovic
maintainer:         stevana@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE

library
  hs-source-dirs:   src
  exposed-modules:
    LibMain
    LoadGenerator
    Monitor
    PIDController
    Plot
    Pool
    Queue

  build-depends:
    , async
    , base            ^>=4.15.1.0
    , Chart
    , Chart-diagrams
    , process
    , stm
    , time

  default-language: Haskell2010
  ghc-options:      -Wall

executable elastically-scalable-thread-pools
  main-is:          Main.hs
  build-depends:
    , base
    , elastically-scalable-thread-pools

  hs-source-dirs:   app
  default-language: Haskell2010
